--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,36 @@
           <a class="navbar-brand" href="#">Nes and Meek</a>
 
           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav ">
-              <li><%= link_to "home", home_path %></li>
+            <ul class="navbar-nav">
+              <li class="nav-item"><%= link_to "home", home_path %></li>
             </ul>
             <ul class="navbar-nav navbar-right">
-              <li><%= link_to "Create Post", new_post_path %></li>
+              <li class="nav-item"><%= link_to "Create Post", new_post_path %></li>
             </ul>
           </div>
         </nav>
+
+<!-- <nav class="navbar navbar-default">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <%= link_to "home", home_path %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "home", home_path %>
+      </li>
+      <li class="nav-item">
+        <li class="nav-item"><%= link_to "Create Post", new_post_path %></li>
+      </li>
+      <li class="nav-item">
+        <li class="nav-item"><%= link_to "Create Post", new_post_path %></li>
+      </li>
+    </ul>
+  </div>
+</nav> -->
 
     <div class='container'>
     <%= yield %>
