--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Add Post</h1>
+<h1>Edit Post</h1>
+
+
+<%= form_for :post, url: post_path(@post), method: :patch  do |f| %>
 
 <% if @post.errors.any? %>
   <% @post.errors.full_messages.each do |msg| %>
@@ -6,7 +9,6 @@
   <% end %>
 <% end %>
 
-<%= form_for :post, url: posts_path  do |f| %>
   <p>
     <%= f.label :title %><br />
     <%= f.text_field(:title, {:class => 'form-control'}) %>
