--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,7 @@
 
 <hr />
 <%= link_to 'Edit', edit_post_path(@post), :class => 'btn btn-default' %>
+<%= link_to 'Delete', post_path(@post),
+            method: :delete,
+            data: {confirm: 'Do you want to delete this item?'},
+            :class => 'btn btn-danger' %>
