--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,3 +7,28 @@
             method: :delete,
             data: {confirm: 'Do you want to delete this item?'},
             :class => 'btn btn-danger' %>
+<hr />
+
+<h3>Add Comment</h3>
+<%= form_for([@post, @post.comments.build])  do |f| %>
+
+<% if @post.errors.any? %>
+  <% @post.errors.full_messages.each do |msg| %>
+    <div class="alert alert-danger"><%= msg %></div>
+  <% end %>
+<% end %>
+
+  <p>
+    <%= f.label :name %><br />
+    <%= f.text_field(:name, {:class => 'form-control'}) %>
+  </p>
+
+  <p>
+    <%= f.label :body %><br />
+    <%= f.text_area(:body, {:class => 'form-control'}) %>
+  </p>
+
+  <p>
+    <%= f.submit({:class => 'btn btn-primary'}) %>
+  </p>
+<% end %>
