--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,33 +8,5 @@
             data: {confirm: 'Do you want to delete this item?'},
             :class => 'btn btn-danger' %>
 <hr />
-
-<% @post.comments.each do |comment| %>
-  <div class='well'>
-    <p><strong><%= comment.name%></strong>: <%= comment.body %></p>
-  </div>
-<% end %>
-
-<h3>Add Comment</h3>
-<%= form_for([@post, @post.comments.build])  do |f| %>
-
-<% if @post.errors.any? %>
-  <% @post.errors.full_messages.each do |msg| %>
-    <div class="alert alert-danger"><%= msg %></div>
-  <% end %>
-<% end %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field(:name, {:class => 'form-control'}) %>
-  </p>
-
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area(:body, {:class => 'form-control'}) %>
-  </p>
-
-  <p>
-    <%= f.submit({:class => 'btn btn-primary'}) %>
-  </p>
-<% end %>
+<%= render 'comments/comments' %>
+<%= render 'comments/form' %>
